@@ -6,6 +6,7 @@ import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
 import net.minecraft.network.chat.TextComponent;
 import net.minecraft.network.protocol.game.ClientboundSetTitlesPacket;
+import net.minecraft.network.protocol.game.ClientboundSoundPacket;
 import net.minecraft.server.bossevents.CustomBossEvent;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.sounds.SoundEvent;
@@ -13,6 +14,7 @@ import net.minecraft.sounds.SoundSource;
 import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.projectile.Projectile;
+import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.notcoded.codelib.minecraft.MinecraftAPI;
@@ -20,8 +22,7 @@ import net.notcoded.codelib.util.http.HttpAPI;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.net.URI;
-import java.util.ArrayList;
+import java.net.URL;
 import java.util.Collection;
 import java.util.List;
 import java.util.UUID;
@@ -32,7 +33,7 @@ public class PlayerUtil {
         String response;
 
         try {
-            response = HttpAPI.get(URI.create(String.format("https://sessionserver.mojang.com/session/minecraft/profile/%s", uuid)).toURL());
+            response = HttpAPI.get(new URL(String.format("https://sessionserver.mojang.com/session/minecraft/profile/%s", uuid)));
         } catch(Exception ignored) { return null; }
 
         if(response != null && !response.trim().isEmpty()) {
@@ -91,7 +92,7 @@ public class PlayerUtil {
         }
     }
 
-    public static boolean minecraftSendBossbar(CustomBossEvent customBossEvent, @Nullable Collection<ServerPlayer> collection) {
+    public static boolean sendBossbar(CustomBossEvent customBossEvent, @Nullable Collection<ServerPlayer> collection) {
         if(collection == null) {
             customBossEvent.removeAllPlayers();
             return true;
@@ -119,9 +120,9 @@ public class PlayerUtil {
         return sendBossbar(customBossEvent, player.unwrap(), remove);
     }
 
-    public static void broadcastSound(List<NexiaPlayer> players, SoundEvent soundEvent, SoundSource soundSource, float volume, float pitch) {
-        for (NexiaPlayer player : players) {
-            player.sendSound(soundEvent, soundSource, volume, pitch);
+    public static void broadcastSound(List<ServerPlayer> players, SoundEvent soundEvent, SoundSource soundSource, float volume, float pitch) {
+        for (ServerPlayer player : players) {
+            sendSound(player, soundEvent, soundSource, volume, pitch);
         }
     }
 
@@ -143,38 +144,69 @@ public class PlayerUtil {
             return (ServerPlayer) player.getKillCredit();
         }
 
-        return getPlayerAttacker(attackerEntity);
-    }
-
-    public static ServerPlayer getPlayerAttacker(@NotNull ServerPlayer player) {
-
-        if(player.getKillCredit() instanceof ServerPlayer) {
-            return (ServerPlayer) player.getKillCredit();
-        }
-
         if(player.getLastDamageSource() != null && player.getLastDamageSource().getEntity() != null) getPlayerAttacker(player.getLastDamageSource().getEntity());
 
         return null;
     }
 
     public static ServerPlayer getPlayerAttacker(Entity attackerEntity) {
-        switch (attackerEntity) {
-            case ServerPlayer serverPlayer -> {
-                return serverPlayer;
-            }
-            case Projectile projectile -> {
-                Entity projectileOwner = projectile.getOwner();
-                if (!(projectileOwner instanceof ServerPlayer)) return null;
-                return (ServerPlayer) projectileOwner;
-            }
-            case null, default -> {
-                return null;
-            }
+
+        if (attackerEntity == null) return null;
+
+        if (attackerEntity instanceof ServerPlayer) {
+            return (ServerPlayer) attackerEntity;
+        } else if (attackerEntity instanceof Projectile) {
+            Entity projectileOwner = ((Projectile) attackerEntity).getOwner();
+            if (!(projectileOwner instanceof ServerPlayer)) return null;
+            return (ServerPlayer) projectileOwner;
         }
+
+        return null;
     }
 
     public static boolean couldCrit(ServerPlayer player) {
         return !player.isOnGround() && player.fallDistance > 0.0f && !player.hasEffect(MobEffects.BLINDNESS)
                 && !player.onClimbable() && !player.isInWater() && !player.isPassenger();
+    }
+
+    public static void removeItem(ServerPlayer player, Item item, int count) {
+        for (ItemStack itemStack : ItemStackUtil.getInvItems(player)) {
+            if (itemStack.getItem() != item) continue;
+
+            if (itemStack.getCount() >= count) {
+                itemStack.shrink(count);
+                break;
+            } else {
+                count -= itemStack.getCount();
+                itemStack.shrink(itemStack.getCount());
+            }
+        }
+    }
+
+    public static void broadcastTitle(List<ServerPlayer> players, String title, String subtitle) {
+        ClientboundSetTitlesPacket titlePacket = new ClientboundSetTitlesPacket(
+                ClientboundSetTitlesPacket.Type.TITLE, new TextComponent(title));
+        ClientboundSetTitlesPacket subtitlePacket = new ClientboundSetTitlesPacket(
+                ClientboundSetTitlesPacket.Type.SUBTITLE, new TextComponent(subtitle));
+
+        for (ServerPlayer player : players) {
+            sendDefaultTitleLength(player);
+            player.connection.send(titlePacket);
+            player.connection.send(subtitlePacket);
+        }
+    }
+
+    public static void sendSound(ServerPlayer player, SoundEvent soundEvent, SoundSource soundSource, float volume, float pitch) {
+        sendSound(player, new EntityPos(player), soundEvent, soundSource, volume, pitch);
+    }
+
+    public static ServerPlayer getFixedPlayer(ServerPlayer serverPlayer) {
+        if (serverPlayer == null) return null;
+        return ServerTime.minecraftServer.getPlayerList().getPlayer(serverPlayer.getUUID());
+    }
+
+    public static void sendSound(ServerPlayer player, EntityPos position, SoundEvent soundEvent, SoundSource soundSource, float volume, float pitch) {
+        player.connection.send(new ClientboundSoundPacket(soundEvent, soundSource,
+                position.x, position.y, position.z, 16f * volume, pitch));
     }
 }
